--- a/client-side/src/App.css
+++ b/client-side/src/App.css
@@ -1,3 +1,29 @@
 .card-img-top {
   object-fit: cover;
 }
+
+.card {
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-header {
+  background-color: #074873;
+  color: #fff;
+  border-radius: 10px 10px 0 0;
+}
+
+.form-control {
+  border-radius: 4px;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
