modify [James] : Modify the structure of the receipt

--- a/client-side/src/App.css
+++ b/client-side/src/App.css
@@ -33,3 +33,12 @@
   font-size: smaller;
   text-align: start;
 }
+@media print {
+  .hidden-on-screen {
+    display: block !important;
+  }
+}
+
+.hidden-on-screen {
+  display: none;
+}
