--- a/client-side/src/index.css
+++ b/client-side/src/index.css
@@ -1,5 +1,5 @@
 /* src/index.css */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -24,9 +24,12 @@
 
   
   body {
-    @apply min-h-screen min-w-[320px] font-montserrat  bg-secondary scroll-smooth
+    @apply min-h-screen min-w-[320px] font-primary  bg-secondary scroll-smooth
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-extrabold
+  }
  /* styles.css */
 ::-webkit-scrollbar {
   @apply w-1 h-1
