--- a/client-side/src/index.css
+++ b/client-side/src/index.css
@@ -6,25 +6,18 @@
 @tailwind utilities;
 
 
-
-
-
-.hamburger {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 30px;
-    height: 24px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
+@layer utilities {
+  ::selection {
+    @apply bg-secondary text-primary
   }
-  
 
+  ::-moz-selection {
+    @apply bg-secondary text-primary
+  }
+}
   
   body {
-    @apply min-h-screen min-w-[320px] font-primary  bg-secondary scroll-smooth
+    @apply min-h-screen min-w-[320px] font-primary bg-[#f2f2f2] scroll-smooth
   }
 
   h1, h2, h3, h4, h5, h6 {
